Closed Bug 1954534 Opened 7 months ago Closed 6 months ago

java.lang.SecurityException: Isolated process not allowed to call getContentProvider with enable-isolated-process

Categories

(GeckoView :: General, defect)

All
Android
defect

Tracking

(firefox138 fixed)

RESOLVED FIXED
138 Branch
Tracking Status
firefox138 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

(Blocks 1 open bug)

Details

(Whiteboard: [fxdroid] [geckoview] )

Attachments

(2 files)

When selecting word with isolated-process, SecurityException is thrown on content process.

03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: >>> REPORTING UNCAUGHT EXCEPTION FROM THREAD 112 ("Gecko")
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: java.lang.SecurityException: Isolated process not allowed to call getContentProvider
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.os.Parcel.readException(Parcel.java:1683)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.os.Parcel.readException(Parcel.java:1636)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.app.ActivityManagerProxy.getContentProvider(ActivityManagerNative.java:4169)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.app.ActivityThread.acquireProvider(ActivityThread.java:5434)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.app.ContextImpl$ApplicationContentResolver.acquireProvider(ContextImpl.java:2248)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.content.ContentResolver.acquireProvider(ContentResolver.java:1499)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.provider.Settings$NameValueCache.lazyGetProvider(Settings.java:1554)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.provider.Settings$NameValueCache.getStringForUser(Settings.java:1597)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.provider.Settings$System.getStringForUser(Settings.java:1911)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.provider.Settings$System.getIntForUser(Settings.java:1981)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at android.provider.Settings$System.getInt(Settings.java:1976)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at org.mozilla.gecko.GeckoAppShell.vibrateOnHapticFeedbackEnabled(GeckoAppShell.java:985)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at org.mozilla.gecko.GeckoAppShell.performHapticFeedback(GeckoAppShell.java:964)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at org.mozilla.gecko.mozglue.GeckoLoader.nativeRun(Native Method)
03-18 01:31:20.573  2830  2844 E GeckoCrashHandler: 	at org.mozilla.gecko.GeckoThread.run(GeckoThread.java:498)

Also, when I look bug 1946043's failures, it seems to be same exception.

Actually, nsIHapticFeedback is called on content process. Then it calls
OS APIs on content process. So if is is isolated process, it doesn't
work or it will crash.

This patch moves haptic feedback implementation to hal to call OS APIs
on chrome process, like vibration.

Since nsIHapticFeedback's logic is moved to hal, we can unify
nsHapticFeedback.

Attachment #9472613 - Attachment description: WIP: Bug 1954534 - Part 1. Move haptic feedback implementation to hal. r=gsvelto! → Bug 1954534 - Part 1. Move haptic feedback implementation to hal. r=gsvelto!
Attachment #9472614 - Attachment description: WIP: Bug 1954534 - Part 2. Unified nsHapticFeedback. r=gsvelto! → Bug 1954534 - Part 2. Unified nsHapticFeedback. r=gsvelto!
Whiteboard: [fxdroid] [geckoview]
Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/91a0f4cf98b5 Part 1. Move haptic feedback implementation to hal. r=geckoview-reviewers,gsvelto,ohall https://hg.mozilla.org/integration/autoland/rev/625e60d4c76b Part 2. Unified nsHapticFeedback. r=gsvelto
Status: NEW → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: