Bug 1954534 - Part 1. Move haptic feedback implementation to hal. r=geckoview-reviewers,gsvelto,ohall

Actually, nsIHapticFeedback is called on content process. Then it calls
OS APIs on content process. So if is is isolated process, it doesn't
work or it will crash.

This patch moves haptic feedback implementation to hal to call OS APIs
on chrome process, like vibration.

Differential Revision: https://phabricator.services.mozilla.com/D241929